# AudioFingerprinting

./: .gitignore  README.md  pyproject.toml  requirements.txt
audio_fingerprinting/database/: db.py
audio_fingerprinting/fingerprint/: engine.py  matcher.py
audio_fingerprinting/rest/: api.py
audio_fingerprinting/utils/: audio.py  mic.py  youtube.py
